namespace ConsoleRpgStage1.Combat;

public interface IAttackStyle
{
    string Name { get; }
}
